feat: testing for authentication and pomodoro sessions